[project]
name = "wyoming-kokoro"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncio>=4.0.0",
    "kokoro-onnx[gpu]>=0.4.9",
    "misaki[en]>=0.9.4",
    "sentence-stream>=1.2.1",
    "wyoming>=1.8.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.10",
]

[project.optional-dependencies]
cpu = [
  "torch",
]
rocm = [
  "torch",
  "pytorch-triton-rocm ; sys_platform == 'linux'"
]
cu128 = [
    "torch"
]
xpu = [
    "torch",
    "pytorch-triton-xpu"
]

[tool.uv]
conflicts = [
  [
    { extra = "cpu" },
    { extra = "rocm" },
    { extra = "cu128" },
    { extra = "xpu" },
  ],
]


[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-rocm", extra = "rocm", marker = "sys_platform == 'linux'" },
  { index = "pytorch-cu128", extra = "cu128" },
  { index = "pytorch-xpu", extra = "xpu" },
]
pytorch-triton-rocm = [
    { index = "pytorch-rocm", extra = "rocm", marker = "sys_platform == 'linux'" }
]
pytorch-triton-xpu = [
    { index = "pytorch-xpu", extra = "xpu" }
]

[[tool.uv.index]]
name = "pytorch-rocm"
url = "https://download.pytorch.org/whl/rocm6.4"
explicit = true

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "pytorch-xpu"
url = "https://download.pytorch.org/whl/xpu"
explicit = true

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"
